--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "core-js": "^2.5.4",
     "firebase": "^6.3.1",
     "jquery": "^3.4.1",
+    "ngx-pagination": "^4.1.0",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^8.14.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
