--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "core-js": "^2.5.4",
     "firebase": "^6.3.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "ngx-pagination": "^4.1.0",
     "popper": "^1.0.1",
+    "recordrtc": "^5.5.8",
     "rxjs": "~6.3.3",
     "sweetalert2": "^8.14.0",
     "tslib": "^1.9.0",
